esh项目，oha设备存储cookie写入的值的问题尚未解决

--- a/esh/WebContent/chat.html
+++ b/esh/WebContent/chat.html
@@ -2,18 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="pragma" content="no-cache">
-    <meta http-equiv="cache-control" content="no-cache">
-    <meta http-equiv="expires" content="0">   
     <title>咨询</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/jquery-weui.min.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/swiper-3.4.2.min.css">
+    <link rel="stylesheet" href="assets/css/weui.min.css">
+    <link rel="stylesheet" href="./assets/css/jquery-weui.min.css">
+    <link rel="stylesheet" href="./assets/css/animate.css">
+    <link rel="stylesheet" href="./assets/css/swiper-3.4.2.min.css">
   </head>
   <body>
 
@@ -29,12 +27,24 @@
         </div>
       </header>
       <section>
-        <div id="chat">
-
+        <div id="selChater">
+          <div class="weui-panel weui-panel_access">
+            <div class="weui-panel__bd">
+              <!-- 循环a标签 -->
+              <!-- 
+              <a href="./chatPanel.html" class="weui-media-box weui-media-box_appmsg">
+                <div class="weui-media-box__hd">
+                  <img class="weui-media-box__thumb" src="./assets/images/1.jpg">
+                </div>
+                <div class="weui-media-box__bd">
+                  <h4 class="weui-media-box__title">烤鸭医生</h4>
+                  <p class="weui-media-box__desc">烤鸭医生是个大好人</p>
+                </div>
+              </a>
+               -->
+            </div>
+          </div>
         </div>
-           <section>
-		      <span id="show"></</span>
-		   </section>
         <div id="sidebar">
           <div class="sideBarMenu"><a href="./home.html"><div class="icon"><span class="fa fa-cube"></span></div><div class="title">首页</div></a></div>
           <div class="sideBarMenu"><a href="./selectEquit.html"><div class="icon"><span class="fa fa-magic"></span></div><div class="title">理疗</div></a></div>
@@ -51,13 +61,9 @@
     <script src="assets/js/oha/oha_api.js"></script>
     <script src="assets/js/oha/oha_timer.js"></script>
     <script src="assets/js/classie.js"></script>
-    <script src="assets/js/eshAPI.js"></script>
-    <script src="assets/js/layer/layer.js"></script>
-    <script src="assets/js/jquery-weui.min.js"></script>
-    <script src="assets/js/swiper-3.4.2.jquery.min.js"></script>
-    <script src="assets/js/swiper.animate1.0.2.min.js"></script>
-    <script type="text/javascript">
-    	//document.getElementById('show').innerText = localStorage.inputText;  
-    </script>
+    <script src="./assets/js/jquery-weui.min.js"></script>
+    <script src="./assets/js/swiper-3.4.2.jquery.min.js"></script>
+    <script src="./assets/js/swiper.animate1.0.2.min.js"></script>
+    <script src="./assets/js/update.js"></script>
   </body>
 </html>
