--- a/esh/WebContent/default.html
+++ b/esh/WebContent/default.html
@@ -6,9 +6,9 @@
 <!--<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=0.5; user-scalable=0;">-->
 <title>oMass</title>
 <link href="files/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="assets/js/oha/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="assets/js/oha/oha_config.js"></script>
-<script type="text/javascript" src="assets/js/oha/oha_api.js"></script>
+<script type="text/javascript" src="./assets/js/oha/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="oha_config.js"></script>
+<script type="text/javascript" src="./assets/js/oha/oha_api.js"></script>
   <script>
     $(window).load(function(){
       document.location.href=oha_api.getHtml();
